--- a/trunk/SoundEffects/AndroidManifest.xml
+++ b/trunk/SoundEffects/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -25,10 +29,6 @@
         <activity
             android:name="vng.wmb.activity.EffectActivity"
             android:label="@string/title_activity_effect" >
-        </activity>
-        <activity
-            android:name="vng.wmb.activity.RecordingActivity"
-            android:label="@string/title_activity_recording" >
         </activity>
     </application>
 
